--- a/Login/View/Home.html
+++ b/Login/View/Home.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
@@ -68,13 +68,24 @@
             left: 50%;
             top: 50px;
         }
+
+        @media (max-width: 767px) {
+            .bg-text {
+                position: inherit;
+                transform: none !important;
+                margin-left: 0 !important;
+                margin-top: 0 !important;
+                width:86%;
+            }
+        }
+
     </style>
 </head>
 <body>
     <div class="container-fluid zero_all">
 
         <div id="banner" class="row zero_all" style="position:relative;width:100%; height:450px;background-image: radial-gradient(#6495ed,#81d4fa);opacity: 0.95;">
-            <img id="banner-image" src="https://www.books-business.com/images/home-1.png" style="float:right;padding:15px;" />
+            <img id="banner-image" src="https://www.books-business.com/images/home-1.png" style="float:right;padding:15px;width:100%;" />
             <div id="banner-text" style="position:absolute;top:0px;left:0px; width:100%;   color:white; ">
                 <div id="bText" class="bg-text">
 
@@ -85,7 +96,7 @@
                         <li><h4>Organization Expenses and Income</h4></li>
                         <li><h4>Taxes</h4></li>
                     </ul>
-                    <button type="button" class="btn btn-success">Register</button>
+                    <button type="button" class="btn btn-success" ng-click="GoToRegister()">Register</button>
                 </div>
             </div>
 
