--- a/styles/xpen.css
+++ b/styles/xpen.css
@@ -268,3 +268,36 @@
 .panel-default > .panel-heading {
     color:#fff;
 }
+
+/*footer Styles */
+.footer-titles {
+	border-bottom: 1px solid #535151;
+}
+
+.footer-titles div {
+	margin: 10px 28px;
+	display: inline-block;
+}
+
+.footer-titles div a {
+	color: #cbc2c2;
+	font-size: 16px;
+}
+
+.social-icons div {
+	display: inline-block;
+	margin: 5px;
+	margin-top: 30px;
+}
+
+.social-icons div a {
+	background-color: #c3c0c0;
+	border-radius: 100%;
+	padding: 9px 9px;
+	margin: 0 20px;
+}
+@media (max-width: 767px) {
+	.footer-titles div {
+		margin: 10px 25px;
+	}
+}
