--- a/styles/xpen.css
+++ b/styles/xpen.css
@@ -79,10 +79,30 @@
 			background-image:linear-gradient(#191919,#000000);
 			 
 		 }
+
+.registration-dialog-form{
+	position:absolute;
+	top:0;
+	right:0;
+}
+.register-form-section {
+	width: 500px;
+	background-color: #efefef;
+	border-radius: 5px;
+	position: absolute;
+	top: -49px;
+	right: 30px
+}
+.register-main-section {
+	height: 300px;
+	margin-top: 50px !important;
+	margin-bottom: 50px;
+	position: relative;
+}
 .footer-align {
-    text-decoration: none;
-    font-size: 14px;
-    text-align: left;
+	text-decoration: none;
+	font-size: 14px;
+	text-align: left;
 }
         .footer-align ul {
             list-style-type: none;
@@ -315,6 +335,22 @@
 		width: 100%;
 		background-color: #efefef;
 		border-radius: 5px;
+	}
+	.register-main-section {
+		height: auto;
+		margin-top: 0 !important;
+		margin-bottom: 0;
+		position: relative;
+	}
+	.registration-dialog-form {
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
+	.register-form-section {
+		width: 90%;
+		top: 0;
+		right: 20px;
 	}
 	.footer-titles div {
 		margin: 10px 25px;
