-js-eeror-main-controller

--- a/GAS/View/main.html
+++ b/GAS/View/main.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
 </head>
-<body>
+<body ng-controller="mainCtrl">
     <div class="container-fluid zero_margin">
         <div class="row" ng-show="ProjectList.length==0">
             No Project found, Please create Project First
