--- a/GAS/View/Project.html
+++ b/GAS/View/Project.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
@@ -17,7 +17,7 @@
         
 
         <div class="row zero_margin">
-            <div class="col-md-9 padding-10">
+            <div class="col-md-8 padding-10">
                 <div class="panel panel-default">
                     <div class="panel-heading bg_greyBlue">
                         My Projects
@@ -86,7 +86,7 @@
                     <span class="fa fa-plus" title="Create Project" ng-click="open()" style="margin-left:20px;"></span>
                 </div>-->
 
-                <div class="col-md-3 hidden-sm hidden-xs padding-10" >
+                <div class="col-md-4 hidden-sm hidden-xs padding-10" >
 
                     <div class="panel panel-default"  style="height:{{row1Height}};">
                         <div class="panel-heading bg_greyBlue" style="background-color:#9898a5;">
