--- a/GAS/View/Project.html
+++ b/GAS/View/Project.html
@@ -128,7 +128,7 @@
             <div class="col-sm-12 zero_margin" >
                 <div class="panel panel-default" style="margin:5px;">
                     <!--  <linechart api="api" style="margin:50px; height:200px;" data="expensedata" options="expenseOptions"></linechart>-->
-                    <div class="panel-heading bg_greyBlue">Daily Expense / Received</div>
+                    <div class="panel-heading bg_greyBlue" style="margin-bottom:10px;">Daily Expense / Received</div>
 
                     <canvas id="bar" class="chart chart-bar" chart-data="projectdata" chart-labels="labels" chart-colors="colors"
                             chart-series="series" style="max-height:{{row2Height}};width:100%;"></canvas>
