--- a/GAS/View/Approval.html
+++ b/GAS/View/Approval.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
@@ -132,7 +132,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div style="max-height:{{ScreenHeight}}; overflow-x:hidden; overflow-y:scroll;margin:0px;padding:0px;">
+                    <div style=" overflow-x: hidden; overflow-y: auto; margin: 0px; padding: 0px; max-height:{{ScreenHeight}};">
                         <table style="width:100%;">
 
                             <tr class="row" ng-repeat="adv in advanceItems">
