--- a/GAS/View/Profile.html
+++ b/GAS/View/Profile.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html ng-app="gas">
 <head>
     <title></title>
@@ -128,7 +128,7 @@
                     <div class="layout_modal_body container-fluid">
                         <form name="newData" style="margin:5px 5px; text-align:left;">
                             <div class="row">
-                                <h3> Sure to quit organization?</h3>
+                                <h4 style="margin:0;margin-bottom:10px;"> Sure to quit organization?</h4>
                                 <div class="alert alert-warning" role="alert"> you will remain registered as personal user, till you join some other oganization!</div>
                             </div>
                         </form>
