--- a/styles/gap.css
+++ b/styles/gap.css
@@ -176,7 +176,7 @@
     color: #fff;
     /*font-size: large;*/
     text-align: left;
-    padding: 15px;
+    padding:2px 20px;
     margin: 0px;
     border-bottom: 1px solid grey;
     background-color: #337ab7;
@@ -194,7 +194,7 @@
     color: black;
     /*font-size: small;*/
     text-align: left;
-    padding: 15px;
+    padding: 15px 30px;
     margin: 0px;
     
 }
