--- a/GAS/View/Requests.html
+++ b/GAS/View/Requests.html
@@ -67,14 +67,13 @@
             <div id="Organization_Form" ng-show="NewOrganizationForm" class="layout_modal_Window">
                 <div class="layout_modal_Content" style="width:640px; position: relative;">
                     <div class="layout_modal_header">
-                        <h4>Add Detail Expense</h4>
+                        <h4>Add New Organization</h4>
                     </div>
                     <div class="layout_modal_body container-fluid">
                         <form name="newActivity" style="margin:5px 5px; text-align:left;">
                          <div class="row" style="border-bottom:solid 1px grey;">
                                 <div class="col-sm-6">
                                     <input type="text" placeholder="Organization Name" ng-model="OrgName" />
-
                                 </div>
                                 <div class="col-sm-6">
                                     <input type="text" placeholder="Number of Employee" ng-model="EmployeeCount" />
