--- a/GAS/View/managerdashboard.html
+++ b/GAS/View/managerdashboard.html
@@ -92,7 +92,7 @@
 
             <div class="col-sm-4">
                 <div class="card-header">Project Alert</div>
-                <div class="shadow p-3 mb-5 bg-c4 rounded" style="height:122px;color:red">
+                <div class="shadow p-3 mb-5 bg-c4 rounded" style="height:122px;color:white;">
                     <h4>Project: NBSZ App</h4><h4 class="blink_me"> Expense overbudget</h4>
                 </div>
             </div>
